--- a/src/document_setup.tex
+++ b/src/document_setup.tex
@@ -55,6 +55,7 @@
 \usepackage{subfig}
 \usepackage[export]{adjustbox}
 \usepackage{gensymb}
+\usepackage{standalone}
 
 % print version has different margins to accommodate the spine of the book
 % do not move this around, or it stops working
