Almost ready, several fixes needed

--- a/src/abstrakt_cz.tex
+++ b/src/abstrakt_cz.tex
@@ -8,7 +8,7 @@
 \vskip 0.5em
 
 \sloppy
-Tato práce je zaměřená na problematiku sledování lesní cesty pomocí obrázku z monokulární kamery, připevněné na bezpilotní helikoptéře nebo pozemním vozidle. Je představen systém, řešící úlohu navigace podél stezky v lese. To bylo dosaženo s využitím klasifikační hluboké konvoluční neuronové sítě pro určení směru natočení helikoptéry vzhledem k cestě. Systém byl implementován pro běh v reálném čase na bezpilotní helikoptéře MRS. Výkon a robustnost byla otestována v simulaci a následně během experimentů v reálném světe. Implementovaný systém prokázal dobré praktické výsledky a může být použit pro jako výchozí bod pro komplexnější navigační a průzkumné aplikace.
+Tato práce je zaměřená na problematiku sledování lesní cesty pomocí obrázku z monokulární kamery, připevněné na bezpilotní helikoptéře nebo pozemním vozidle. Je představen systém, řešící úlohu navigace podél stezky v lese. To bylo dosaženo s využitím klasifikační hluboké konvoluční neuronové sítě pro určení směru natočení helikoptéry vzhledem k cestě. Systém byl implementován pro běh v reálném čase na bezpilotní helikoptéře MRS. Součastí implementace je algoritmus na generování bodů trajektorie pro plánovač. Výkon a robustnost byla otestována v simulaci a následně během experimentů v reálném světe. Implementovaný systém prokázal dobré praktické výsledky a může být použit pro jako výchozí bod pro komplexnější navigační a průzkumné aplikace.
 
 \vskip 1em
 
