--- a/src/acknowledgments.tex
+++ b/src/acknowledgments.tex
@@ -2,6 +2,12 @@
 
 \section*{Acknowledgments}
 
-Firstly, I would like to express my gratitude to my supervisor.
+Firstly, I would like to express my gratitude to my supervisor Ing. Matouš Vrba for his great support and providing all the necessary information during writing this thesis. I'm grateful to the MRS team for guiding me during the experiments.
+
+I would also like to thank my parents, who made it possible for me to study at CTU in Prague and for their support. 
+
+Finally, I would like to express my respect and deep gratitude to my friends, relatives and other people who now, no matter what, defend their home and democracy in Ukraine.
+
+
 
 \vspace{2.5cm}
