--- a/src/abbreviations.tex
+++ b/src/abbreviations.tex
@@ -1,23 +1,22 @@
 %!TEX root = ../main.tex
 
 \begin{acronym}
-  \acro{API}[API]{Application Programming Interface}
   \acro{CTU}[CTU]{Czech Technical University}
-  \acro{DOF}[DOF]{degree-of-freedom}
   \acro{FOV}[FOV]{Field of View}
   \acro{GNSS}[GNSS]{Global Navigation Satellite System}
   \acro{GPS}[GPS]{Global Positioning System}
   \acro{IMU}[IMU]{Inertial Measurement Unit}
-  \acro{LKF}[LKF]{Linear Kalman Filter}
-  \acro{LTI}[LTI]{Linear time-invariant}
   \acro{LiDAR}[LiDAR]{Light Detection and Ranging}
   \acro{MAV}[MAV]{Micro Aerial Vehicle}
-  \acro{MPC}[MPC]{Model Predictive Control}
   \acro{MRS}[MRS]{Multi-robot Systems Group}
   \acro{ROS}[ROS]{Robot Operating System}
-  \acro{RTK}[RTK]{Real-time Kinematics}
-  \acro{SLAM}[SLAM]{Simultaneous Localization And Mapping}
   \acro{UAV}[UAV]{Unmanned Aerial Vehicle}
   \acro{UGV}[UGV]{Unmanned Ground Vehicle}
-  \acro{UKF}[UKF]{Unscented Kalman Filter}
+  \acro{RGB}[RGB]{Red Green Blue additive colour model}
+  \acro{USB}[USB]{Universal Serial Bus}
+  \acro{IR}[IR]{Infrared}
+  \acro{CNN}[CNN]{Convolutional Neural Network}
+  \acro{DNN}[DNN]{Deep Neural Network}
+  \acro{SAR}[SAR]{Search and Rescue}
+  \acro{GPU}[GPU]{Graphics Processing Unit}
 \end{acronym}
