--- a/src/title.tex
+++ b/src/title.tex
@@ -18,8 +18,8 @@
 
     {\large \Location, \Date}\\[3em]
 
-    Study programme: \Programme\\
-    Branch of study: \Field\\[4em]
+    Study programme: \Programme\\[6em]
+    %Branch of study: \Field\\[4em]
 
     \textbf{Supervisor: \Supervisor}\\
 
